[package]
name = "ppmtrans"
version = "0.1.0"
edition = "2021"
author = "Yann Youbi <yann-ybi@uri.edu>"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csc411_image = "0.3.1"
array2 = {path = "../array2"}
clap = { version = "4.0.17", features = ["derive"] }
